# ManagersButler

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  artist.sample.json  pyproject.toml  requirements.txt  venues.yaml
.github/workflows/: ci.yml
src/: dateparser.py  httpx.py  pydantic.py
src/manager_butler/: __init__.py  analysis.py  cli.py  config.py  db.py  models.py  scraper.py
src/selectolax/: parser.py
src/venue_matcher/: capacity.py  cli.py  config.py  db.py  demo.py  import_venues.py  init_command.py  models.py  places.py  profiling_llm.py  scoring.py  show_scoring.py  website_discovery.py
src/venue_matcher/scraping/: extract_css.py  extract_jsonld.py  fetch.py  normalize.py
tests/: test_capacity_extraction.py  test_import_venues.py  test_jsonld_event_extraction.py  test_scoring_capacity_fit.py  test_show_scoring.py
tests/fixtures/: jsonld_events.html
