[project]
name = "managers-butler"
version = "0.1.0"
description = "Scraper and analyzer for venue events to find compatible openers and schedule gaps"
authors = [{name = "ManagersButler", email = ""}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "selectolax>=0.3.18",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "dateparser>=1.2.0",
    "typer>=0.12.0",
]

[project.scripts]
managers-butler = "manager_butler.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"