[project]
name = "managers-butler"
version = "0.2.0"
description = "CLI for discovering US music venues, scraping calendars, inferring venue profiles, and ranking opener matches"
authors = [{name = "ManagersButler", email = ""}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.18",
    "dateparser>=1.2.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44.0"]
test = ["pytest>=8.2.0"]

[project.scripts]
venue-match = "venue_matcher.cli:app"
managers-butler = "venue_matcher.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
