[project]
name = "managers-butler"
version = "0.3.0"
description = "CLI for discovering US music venues, scraping calendars, inferring venue profiles, and finding opener/support slot opportunities"
authors = [{name = "ManagersButler", email = "noreply@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["music", "venues", "booking", "cli", "scraping", "artists", "shows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.18",
    "dateparser>=1.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44.0"]
test = ["pytest>=8.2.0"]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/jt95004w/ManagersButler"
Repository = "https://github.com/jt95004w/ManagersButler"
Issues = "https://github.com/jt95004w/ManagersButler/issues"

[project.scripts]
venue-match = "venue_matcher.cli:app"
managers-butler = "venue_matcher.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
venue_matcher = ["assets/*.db", "assets/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
